Fixed header horizontal alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,10 @@ header a {
     transition: all 0.3s ease-in-out;
 }
 
+header a:first-child {
+    margin-left: -10px;
+}
+
 header .logo {
     display: flex;
     align-items: center;
